--- a/destination.css
+++ b/destination.css
@@ -3,6 +3,11 @@
     margin: 0;
     box-sizing: border-box;
     list-style-type: none;
+    font-family: BookAntiqua;
+}
+@font-face {
+    font-family: BookAntiqua;
+    src: url(/fonts/BKANT.TTF) ;
 }
 .nav{
     height: 4.7rem;
@@ -72,6 +77,7 @@
     background-color: #1e90ff;
     width:100%;
     display: flex;
+   
 }
 .intro1{
     width:24%;
@@ -97,4 +103,195 @@
     margin: 0.25rem;
     color: white;
     text-decoration: none;
+}
+.intro2 a:hover{
+    color: #FDDA0D;
+    font-weight: bold;
+}
+.des{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+    height: 9.5rem;
+}
+.des h2{
+    
+    color:#1e90ff;
+}
+.des p{
+    margin-top: 0.5rem;
+    
+}
+.con{
+    
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 38rem;
+    width: 100%;
+}
+.images{
+   height: 85%;
+   width: 85%;
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: space-between;
+   
+}
+.imge{
+    width: 21rem;
+    height: 48%;
+    background-color: white;
+    
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+}
+.images div img{
+    width: 20.89rem;
+    height:84%;
+   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
+.images div p{
+   
+   margin-left: 1rem;
+   margin-top: 0.38rem; 
+}
+
+.but{
+    width: 100%;
+    height: 1rem;
+    display: flex;
+   justify-content: center;
+   align-items:center;
+}
+.but button{
+    background-color: #a2c71b;
+    color: white;
+    text-decoration: none;
+    width: 7.5rem;
+    height: 2rem;
+    border: none;
+    border-radius: 3.5px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+.cont{
+    width: 100%;
+    height:5rem;
+   background-color:#1e90ff;
+   display: flex;
+}
+.text{
+    width: 50%;
+    height: 100%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.text p{
+    color: white;
+    font-size: 1.83rem;
+}
+.form{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding-left: 0.75rem;
+}
+[type]{
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+}
+[type ="text"]{
+    width: 20%;
+    height: 2rem;
+    padding: 0.5rem;
+    margin: 0px 0.1rem;
+    border: none;
+}
+[type="email"]{
+    width: 50%;
+    height: 2rem;
+    padding: 0.5rem;
+    margin: 0px 0.1rem;
+    border: none;
+}
+[type="submit"]{
+    width: 20%;
+    height: 2rem;
+    background-color: #a2c71b;
+    color: white;
+    border: none;
+}
+.explain{
+    display: flex;
+    width: 100%;
+    height: 16.5rem;
+   
+}
+.empty{
+    height: 100%;
+    width: 10.5%;
+}
+.logo2{
+    height: 100%;
+    width: 24%;
+}
+.logo2 img{
+    height: 35%;
+    width: 40.5%;
+    margin: 1.75rem 0rem 0.35rem 0rem;
+    border-radius: 8%;
+    box-shadow:  rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+}
+.booked{
+    height: 100%;
+    width: 24rem;
+    padding: 0.5rem;
+}
+.booked h4{
+    margin-top: 1.18rem;
+}
+.booked li{
+    margin: 0.1rem 0rem;
+}
+.comun{
+    height: 100%;
+    width: 11rem;
+    
+    display: flex;
+    flex-direction: column;
+}
+.comun h4{
+    margin-top: 1.18rem;
+}
+.comun a{
+    margin: 0.1rem 0rem;
+    text-decoration: none;
+    color: black;
+}
+.link{
+    height: 100%;
+    width: 11rem;
+    
+    display: flex;
+    flex-direction: column;
+}
+.link h4{
+    margin-top: 1.18rem;
+}
+.link a{
+    margin: 0.1rem 0rem;
+    text-decoration: none;
+    color: black;
+}
+.footer{
+    justify-content: center;
+    width: 100%;
+    height: 3rem;
+    background-color:#1e90ff ;
+    color: white;
+    display: flex;
+    align-items: center;
 }
